2006-06-16  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/metal/MetalMenuBarUI.java:
	(update): Added subexpression to if-statement.

2006-06-16  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicRadioButtonUI.java:
	(installDefaults): Removed unneccessary code.
	(paint): Removed complex if-cascade, revert to default icon if
	icon property is not set.
	(getPreferredSize): New method.

2006-06-16  Roman Kennke  <kennke@aicas.com>

	PR 28027
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawImage): Don't use setClip() but instead clipRect() to
	intersect the current clip with a new one.

2006-06-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Rename appletviewer to gappletviewer, jarsigner to
	gjarsigner and keytool to gkeytool.
	* doc/tools.texinfo: Add note about tool exectable names.
	* tools/Makefile.am: Rename appletviewer to gappletviewer,
	jarsigner to gjarsigner and keytool to gkeytool.
	* tools/appletviewer.in: Rename ...
	* tools/gappletviewer.in: New file.
	* tools/jarsigner.in: Rename ...
	* tools/gjarsigner.in: New file.
	* tools/keytool.in: Rename ...
	* tools/gkeytool.in: New file.
	* tools/toolwrapper.c: Simplify TOOLS_ZIP macro.

2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeList.java:
	Add serialization UID.
	* javax/management/DynamicMBean.java:
	New file.
	* javax/management/JMRuntimeException.java:
	Add serialization UID and correct name
	of serialized field.
	* javax/management/MBeanInfo.java: New file.
	
2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeList.java,
	* javax/management/JMRuntimeException.java,
	* javax/management/RuntimeOperationsException.java:
	New files.
	
2006-06-15  Lillian Angel  <langel@redhat.com>

	* java/awt/font/TextLayout.java:
	DEFAULT_CARET_POLICY changed to be public static final.

2006-06-15  Tania Bento  <tbento@redhat.com>
